--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,11 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=PT+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap");
 
 * {
-  font-family: "PT Mono", monospace;
+  font-family: "Racing Sans One", cursive;
 }
 
 body {
   margin: 0;
+  padding: 0;
   font-size: 20px;
   -webkit-font-smoothing: antialiased;
   line-height: 1.3;
@@ -13,4 +14,11 @@ body {
 a {
   color: blue;
   text-decoration: none;
+}
+.Hero {
+  background: url(../images/leaves.jpg);
+  height: 1080px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
