--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -11,14 +11,45 @@ body {
   -webkit-font-smoothing: antialiased;
   line-height: 1.3;
 }
-a {
-  color: blue;
-  text-decoration: none;
-}
+
 .Hero {
-  background: url(../images/leaves.jpg);
+  background: url(../images/jack-b-A1EUK5S7g_g-unsplash.jpg);
   height: 1080px;
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
+}
+.HeroGroup {
+  margin: 0 auto;
+  max-width: 500px;
+  padding: 150px 50px;
+  text-align: center;
+}
+.Hero h1 {
+  margin: 0;
+  color: white;
+  font-size: 60px;
+  line-height: 1.4;
+}
+
+.Hero p {
+  color: rgba(255, 255, 255, 1);
+  font-size: 30px;
+  line-height: 1.2;
+}
+
+.Hero a {
+  font-size: 17px;
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.Hero a:hover {
+  /* border-bottom: 1px dashed #ffffff; */
+  background: white;
+  border: 1px solid white;
+  border-radius: 16px;
+  color: blue;
+  padding: 8px 24px;
+  /* transition 这段代码是从 jaylee 官网抄的 */
+  transition: 0.6s all cubic-bezier(0.23, 1.25, 0.46, 1);
 }
