--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -13,7 +13,36 @@ body {
 }
 
 .Hero {
-  background: url(../images/jack-b-A1EUK5S7g_g-unsplash.jpg);
+  /* background: url(../images/jack-b-A1EUK5S7g_g-unsplash.jpg); */
+  background-image: repeating-linear-gradient(
+      90deg,
+      rgba(243, 243, 243, 0.05) 0px,
+      rgba(243, 243, 243, 0.05) 1px,
+      transparent 1px,
+      transparent 10px
+    ),
+    repeating-linear-gradient(
+      0deg,
+      rgba(243, 243, 243, 0.05) 0px,
+      rgba(243, 243, 243, 0.05) 1px,
+      transparent 1px,
+      transparent 10px
+    ),
+    repeating-linear-gradient(
+      0deg,
+      rgba(243, 243, 243, 0.08) 0px,
+      rgba(243, 243, 243, 0.08) 1px,
+      transparent 1px,
+      transparent 27px
+    ),
+    repeating-linear-gradient(
+      90deg,
+      rgba(243, 243, 243, 0.08) 0px,
+      rgba(243, 243, 243, 0.08) 1px,
+      transparent 1px,
+      transparent 27px
+    ),
+    linear-gradient(90deg, rgb(0, 0, 0), rgb(0, 0, 0));
   height: 1080px;
   background-size: cover;
   background-position: center;
