--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap");
+@font-face {
+  font-family: "Inter", sans-serif;
+  src: url("../fonts/Inter.var.woff2") format("woff2");
+  font-weight: 1 999;
+  font-display: swap;
+}
 
 * {
-  font-family: "Racing Sans One", cursive;
+  font-family: "Inter", sans-serif;
 }
 
 body {
@@ -42,7 +47,7 @@ body {
       transparent 1px,
       transparent 27px
     ),
-    linear-gradient(90deg, rgb(0, 0, 0), rgb(0, 0, 0));
+    linear-gradient(90deg, rgb(32, 14, 97), rgb(100, 7, 109));
   height: 1080px;
   background-size: cover;
   background-position: center;
@@ -54,16 +59,27 @@ body {
   text-align: center;
 }
 .Hero h1 {
+  font-weight: 900;
   margin: 0;
   color: white;
-  font-size: 60px;
+  font-size: 80px;
   line-height: 1.4;
+  opacity: 0;
+  /* animation: HeroAnimation;
+  animation-duration: 3s;
+  animation-delay: 0.2s;
+  animation-fill-mode: forwards;
+  animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1); */
+  /* 上面 5 句可以简写成下面的，但要保证顺序 */
+  animation: HeroAnimation 3s 0.2s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
 .Hero p {
   color: rgba(255, 255, 255, 1);
   font-size: 30px;
   line-height: 1.2;
+  opacity: 0;
+  animation: HeroAnimation 3s 0.2s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
 .Hero a {
@@ -71,6 +87,10 @@ body {
   color: white;
   text-transform: uppercase;
   text-decoration: none;
+  /* transition 这段代码是从 jaylee 官网抄的 */
+  transition: 1s all cubic-bezier(0.2, 0.8, 0.2, 1);
+  opacity: 0;
+  animation: HeroAnimation 3s 0.2s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 .Hero a:hover {
   /* border-bottom: 1px dashed #ffffff; */
@@ -79,8 +99,6 @@ body {
   border-radius: 16px;
   color: black;
   padding: 8px 24px;
-  /* transition 这段代码是从 jaylee 官网抄的 */
-  transition: 0.6s all cubic-bezier(0.23, 1.25, 0.46, 1);
 }
 @media (max-width: 640px) {
   .HeroGroup {
@@ -91,5 +109,15 @@ body {
   }
   .Hero p {
     font-size: 24px;
+  }
+}
+@keyframes HeroAnimation {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
   }
 }
