--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap");
+@font-face {
+  font-family: "Roboto Mono";
+  /* src: local("Roboto Mono"),
+    url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100..900&display=swap"); */
+  src: url("https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@1..900&display=swap");
+  /* font-weight: 100 1000; */
+}
+/* @import url("https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap"); */
 
 * {
-  font-family: "Racing Sans One", cursive;
+  /* font-family: "Racing Sans One", cursive; */
+  font-family: "Hepta Slab";
 }
 
 body {
@@ -42,7 +50,7 @@ body {
       transparent 1px,
       transparent 27px
     ),
-    linear-gradient(90deg, rgb(0, 0, 0), rgb(0, 0, 0));
+    linear-gradient(90deg, rgb(15, 66, 175), rgb(130, 21, 180));
   height: 1080px;
   background-size: cover;
   background-position: center;
@@ -58,6 +66,7 @@ body {
   color: white;
   font-size: 60px;
   line-height: 1.4;
+  font-weight: 666;
 }
 
 .Hero p {
@@ -71,6 +80,8 @@ body {
   color: white;
   text-transform: uppercase;
   text-decoration: none;
+  /* transition 这句代码是从 jaylee 官网抄的 */
+  transition: 0.6s all cubic-bezier(0.23, 1.25, 0.46, 1);
 }
 .Hero a:hover {
   /* border-bottom: 1px dashed #ffffff; */
@@ -79,8 +90,6 @@ body {
   border-radius: 16px;
   color: black;
   padding: 8px 24px;
-  /* transition 这段代码是从 jaylee 官网抄的 */
-  transition: 0.6s all cubic-bezier(0.23, 1.25, 0.46, 1);
 }
 @media (max-width: 640px) {
   .HeroGroup {
