--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,6 +1,3 @@
-.Cards h2 {
-  color: black;
-}
 .Card {
   width: 300px;
   height: 225px;
@@ -18,17 +15,25 @@
   top: 0;
   width: 110%;
   z-index: -1;
+  transition: 1s all cubic-bezier(0.2, 0.8, 0.2, 1);
 }
+
 .Card:hover {
   transform: scale(1.1, 1.1);
   box-shadow: 0 30px 60px rgba(0, 0, 0, 0.4);
 }
+
+.Card:hover img {
+  transform: translateY(-20px);
+}
+
 .Card h3 {
   color: white;
   font-size: 30px;
   margin: 20px 0 10px 20px;
   width: 190px;
 }
+
 .Card p {
   color: rgba(255, 255, 255, 0.8);
   text-transform: uppercase;
