--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -48,7 +48,7 @@ body {
       transparent 27px
     ),
     linear-gradient(90deg, rgb(32, 14, 97), rgb(100, 7, 109));
-  height: 920px;
+  height: 900px;
   /* width: 100%; */
   background-size: cover;
   background-position: center;
@@ -57,7 +57,7 @@ body {
 .HeroGroup {
   margin: 0 auto;
   max-width: 500px;
-  padding: 150px 50px;
+  padding: 150px 50px 32px 50px;
   text-align: center;
 }
 .Hero h1 {
@@ -80,7 +80,7 @@ body {
   color: rgba(255, 255, 255, 1);
   font-size: 30px;
   line-height: 1.2;
-  margin-bottom: 40px;
+  margin: 56px 0 64px 0;
   opacity: 0;
   animation: HeroAnimation 3s 0.2s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
 }
@@ -136,7 +136,7 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   column-gap: 40px;
-  margin: 64px 0;
+  margin: 64px 0 32px 0;
   align-items: center;
   justify-items: center;
 }
