--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -108,7 +108,7 @@ body {
     padding: 100px 20px;
   }
   .Hero h1 {
-    font-size: 40px;
+    font-size: 50px;
   }
   .Hero p {
     font-size: 24px;
@@ -173,9 +173,16 @@ body {
   color: black;
   margin: 0 20px 60px 20px;
   font-size: 60px;
+  line-height: 1.2;
   text-align: center;
   font-weight: 700;
   background: linear-gradient(90deg, rgb(32, 14, 97), rgb(100, 7, 109));
   background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+@media (max-width: 720px) {
+  .Cards h2 {
+    font-size: 50px;
+  }
 }
